# rusty-book-manager

./: Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
adapter/: Cargo.toml
adapter/migrations/: 20260510031311_start.down.sql  20260510031311_start.up.sql
adapter/src/database/: mod.rs
adapter/src/database/model/: book.rs  checkout.rs  user.rs
adapter/src/redis/: mod.rs
adapter/src/repository/: auth.rs  book.rs  checkout.rs  user.rs
api/: Cargo.toml
api/src/: extractor.rs
api/src/handler/: auth.rs  book.rs  health.rs  user.rs
api/src/model/: auth.rs  book.rs  user.rs
api/src/route/: auth.rs  book.rs  health.rs  mod.rs  user.rs  v1.rs
data/: initial_setup.sql
doc/: book-handlers.md
frontend/: package-lock.json
kernel/src/model/: list.rs  role.rs
kernel/src/model/book/: event.rs
kernel/src/model/checkout/: mod.rs
kernel/src/model/user/: event.rs  mod.rs
kernel/src/repository/: auth.rs  book.rs  mod.rs  user.rs
registry/src/: lib.rs
shared/: Cargo.toml
shared/src/: config.rs  env.rs  error.rs
src/: main.rs
