[package]
name = "rusty-book-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["macros"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "uuid", "chrono", "macros", "postgres", "migrate"] }
tokio = { version = "1.52.1", features = ["full"] }

[dev-dependencies]
rstest = "0.26.1"
